# cppstuff

./: .gitignore  CMakeLists.txt  README.md  binarysearch.c  bitfield.c  cpudemo.c  customcmpsearch.c  factor.c  ftpdemo.c  globalctors.c  ipaddr.c  lsearch.c  man_regex.txt  posixeredemo.c  primefactor.c  regexdemo.c  searchdemo.c  squareroot.c  structdemo.c  swap.c  swapdemo.c  vectordemo.cpp
include/: cpuid.h  genfunc.h
